--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "",
+  "name": "@example/minimal",
   "type": "module",
   "version": "0.0.1",
+  "browerslist": [
+    "defaults"
+  ],
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,6 +13,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "astro": "^2.5.6",
+    "astro-icon": "^0.8.1",
+    "postcss": "^8.4.27",
+    "postcss-preset-env": "^9.1.0"
   }
 }
