--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6",
+    "@astrojs/image": "^0.17.3",
+    "astro": "^2.10.1",
     "astro-icon": "^0.8.1",
     "postcss": "^8.4.27",
-    "postcss-preset-env": "^9.1.0"
+    "postcss-preset-env": "^9.1.0",
+    "sharp": "^0.32.4"
   }
 }
