--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@example/minimal",
   "type": "module",
   "version": "0.0.1",
-  "browerslist": [
+  "browserslist": [
     "defaults"
   ],
   "scripts": {
@@ -13,11 +13,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.17.3",
-    "astro": "^2.10.1",
-    "astro-icon": "^0.8.1",
-    "postcss": "^8.4.27",
-    "postcss-preset-env": "^9.1.0",
-    "sharp": "^0.32.4"
+    "astro": "^4.12.0",
+    "postcss": "^8.4.30",
+    "postcss-preset-env": "^9.3.0",
+    "sharp": "^0.33.4"
   }
 }
